feat: add feed.xml

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "date-fns": "^2.15.0",
     "next": "latest",
     "react": "^16.7.0",
-    "react-dom": "^16.7.0"
+    "react-dom": "^16.7.0",
+    "xml-js": "^1.6.11"
   },
   "devDependencies": {
     "@types/react": "^16.9.43",
