--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "amdx": "^0.9.0",
     "amdx-runner": "^0.9.0",
     "date-fns": "^2.15.0",
-    "next": "latest",
+    "next": "^10.0.1",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "rss": "^1.2.2"
