--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "build": "amdxg build:index && amdxg build:history && node script/build-tags.mjs && node script/build-xml.js && next build && next export",
     "dev": "amdxg build:index && amdxg build:history && node script/build-tags.mjs && node script/build-xml.js && next",
     "generate-ogp": "node script/generate-ogp.mjs",
-    "new-page": "amdxg new:page"
+    "new-page": "amdxg new:page",
+    "type-check": "tsc --project tsconfig.json --pretty --noEmit",
+    "lint": "eslint --ext ts --ext tsx .",
+    "fix": "eslint --ext ts --ext tsx --fix ."
   },
   "dependencies": {
     "amdx": "^0.9.0",
@@ -19,8 +22,17 @@
   },
   "devDependencies": {
     "@types/react": "^16.9.43",
+    "@typescript-eslint/eslint-plugin": "^4.6.1",
+    "@typescript-eslint/parser": "^4.6.1",
     "amdx-loader": "^0.9.0",
     "amdxg-cli": "^0.9.4",
+    "eslint": "^7.13.0",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "prettier": "^2.1.2",
     "typescript": "^3.9.7"
   },
   "optionalDependencies": {
