--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "fix": "eslint --ext ts --ext tsx --fix ."
   },
   "dependencies": {
+    "@types/react-dom": "^16.9.9",
     "amdx": "^0.9.0",
     "amdx-runner": "^0.9.0",
     "date-fns": "^2.15.0",
