--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "license": "UNLICENSED",
   "scripts": {
     "build": "amdxg build:index && amdxg build:history && node script/build-tags.mjs && node script/build-xml.js && next build && next export",
-    "dev": "amdxg build:index && amdxg build:history && node script/build-tags.mjs && node script/build-xml.js && next",
+    "dev": "amdxg build:index && amdxg build:history && node script/build-tags.mjs && node script/build-xml.js && next -p 3003",
     "generate-ogp": "node script/generate-ogp.mjs",
     "new-page": "amdxg new:page",
     "type-check": "tsc --project tsconfig.json --pretty --noEmit",
