--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "new-page": "amdxg new:page",
     "type-check": "tsc --project tsconfig.json --pretty --noEmit",
     "lint": "eslint --ext ts --ext tsx .",
-    "fix": "eslint --ext ts --ext tsx --fix ."
+    "fix": "eslint --ext ts --ext tsx --fix .",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "dependencies": {
     "amdx": "^0.9.0",
@@ -21,12 +23,18 @@
     "rss": "^1.2.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.12.10",
+    "@storybook/addon-actions": "^6.1.14",
+    "@storybook/addon-essentials": "^6.1.14",
+    "@storybook/addon-links": "^6.1.14",
+    "@storybook/react": "^6.1.14",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@typescript-eslint/eslint-plugin": "^4.6.1",
     "@typescript-eslint/parser": "^4.6.1",
     "amdx-loader": "^0.9.0",
     "amdxg-cli": "^0.9.4",
+    "babel-loader": "^8.2.2",
     "eslint": "^7.16.0",
     "eslint-config-prettier": "^7.1.0",
     "eslint-plugin-jsx-a11y": "^6.4.1",
