--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -27,6 +27,7 @@
         "plugin:prettier/recommended"
       ],
       "rules": {
+        "@typescript-eslint/explicit-module-boundary-types": "off",
         "react/prop-types": "off",
         "react/react-in-jsx-scope": "off",
         "jsx-a11y/anchor-is-valid": "off",
