--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
     "prettier": "^2.2.1",
+    "prettier-plugin-sorted": "^2.0.0",
     "typescript": "^4.1.3"
   },
   "optionalDependencies": {
