--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,12 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "preserve"
+    "jsx": "preserve",
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["src/components/*"],
+      "~/*": ["./*"]
+    }
   },
   "include": [
     "next-env.d.ts",
